# workshop01_data_project

./: .pre-commit-config.yaml  404.html  README.md  comandos-git.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sys-path.py
app/: main.py  teste_request.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: index.md
search/: search_index.json
tests/: pytest.-comandstxt  test_pipeline.py
