[tool.poetry]
name = "workshop01-data-project"
version = "0.1.0"
description = "Projeto de ETL no python"
authors = ["Vinicius Borges"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
openpyxl = "^3.1.2"
pandas = "^2.1.4"
pytest = "^7.4.3"
requests = "^2.31.0"
isort = "^5.13.2"
mkdocs = "^1.5.3"
taskipy = "^1.12.2"
mkdocstrings-python = "^1.7.5"
Pygments = "^2.17.2"
mkdocs-material = "^9.5.2"
pymdown-extensions = "^10.5"
pre-commit = "^3.6.0"
tomli = "^2.0.1"
pip-audit = "^2.6.2"
black = "^23.12.1"
typing-extensions = "^4.9.0"
exceptiongroup = "^1.2.0"
numpy = "^1.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "workshop01_data_project"

[tool.taskipy.tasks]
format = "isort . && black ."
test = "poetry run pytest -v"
run = "python3 app/main.py"
kill = "kill -9 $(lsof -t -i:8000)"
